[tool.poetry]
name = "keycloak-admin-aio"
version = "1.2.0"
description = "async keycloak admin api wrapper"
authors = ["Nicklas Sedlock <nicklas@delphai.com>"]
homepage = "https://github.com/delphai/keycloak-admin-aio"
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.19.0"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
commitizen = "^2.20.0"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
poethepoet = "^0.10.0"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
ipython = "^7.29.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-dependency = "^0.5.1"
mypy = "^0.910"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.0"
version_files = [
    "keycloak_admin_aio/__version__.py",
    "pyproject.toml:version"
]
tag_format = "$version"

[tool.poe.tasks]
install_pre_commit = "pre-commit install"
lint = "flake8 keycloak_admin_aio/"
format = "black keycloak_admin_aio/"
docgen = "sphinx-build -b html docs/ docs/_build/html"
test = "pytest test"
check_types = "mypy --namespace-packages"
check = "pre-commit run --all-files"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["keycloak_admin_aio/_resources/__init__.py"]

[tool.mypy]
files = "**/*.py"
