[tool.poetry]
name = "keycloak-admin-aio"
version = "1.3.5"
description = "async keycloak admin api wrapper"
authors = ["Nicklas Sedlock <nicklas.sedlock@posteo.net>"]
homepage = "https://github.com/V-Mann-Nick/keycloak-admin-aio"
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.23.3"
dacite = "^1.6.0"

[tool.poetry.group.linting.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
pep8-naming = "^0.13.3"
isort = "^5.12.0"

[tool.poetry.group.testing.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
networkx = "^3.2.1"

[tool.poetry.group.other.dependencies]
commitizen = "^3.5.2"
poethepoet = "^0.21.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"
sphinx-press-theme = "^0.8.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.5"
version_files = [
    "keycloak_admin_aio/__version__.py",
    "pyproject.toml:version"
]
tag_format = "$version"

[tool.poe.tasks]
install_pre_commit = "pre-commit install -t commit-msg -t pre-commit --install-hooks"
uninstall_pre_commit = "pre-commit uninstall -t commit-msg -t pre-commit --install-hooks"
docgen = "sphinx-build -b html docs/ docs/_build/html"
test = "pytest test/"
check = "pre-commit run --all-files"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["keycloak_admin_aio/_resources/__init__.py"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
