[project]
name = "keycloak-admin-aio"
version = "1.3.7"
description = "async keycloak admin api wrapper"
authors = [{name = "Nicklas Sedlock", email = "nicklas.sedlock@posteo.net"}]
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
  "httpx >=0.23.3",
  "dacite >=1.6.0"
]

[project.urls]
Documentation = "https://v-mann-nick.github.io/keycloak-admin-aio/"
Repository = "https://github.com/V-Mann-Nick/keycloak-admin-aio.git"
Issues = "https://github.com/V-Mann-Nick/keycloak-admin-aio/issues"
Changelog = "https://github.com/V-Mann-Nick/keycloak-admin-aio/blob/main/CHANGELOG.md"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.7"
version_files = [
    "keycloak_admin_aio/__version__.py",
    "pyproject.toml:version"
]
tag_format = "$version"

[tool.pyright]
venv = "venv"
reportIncompatibleMethodOverride = false

[tool.uv]
dev-dependencies = [
    "commitizen>=3.29.1",
    "networkx>=3.2.1",
    "pytest>=7.4.4",
    "pytest-asyncio<0.22",
    "sphinx-press-theme>=0.9.1",
    "sphinx>=7.4.7",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403", "F401"]
"keycloak_admin_aio/types/__init__.py" = ["F405"]
"keycloak_admin_aio/_resources/__init__.py" = ["I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  "."
]
